# FreeGui

./: CMakeLists.txt  LICENSE  README.md  README_zh.md
example/createWindow/: CMakeLists.txt  main.cpp
include/FreeGui/core/: object.hpp  signal_slot.hpp
include/FreeGui/widgets/: button.hpp  widget.hpp  window.hpp
src/widgets/: button.cpp  window.cpp
